--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/chloe-vincent03/projet_S6_backend#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.4"
   },
